--- a/notebook/1.EDA STUDENT PERFORMANCE.ipynb
+++ b/notebook/1.EDA STUDENT PERFORMANCE.ipynb
@@ -3133,9 +3133,175 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e9c1e0dd",
+   "cell_type": "code",
+   "execution_count": 253,
+   "id": "2e3c2ddc",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Add underscore in column names if space is present\n",
+    "df.columns = df.columns.str.replace(' ', '_')  # Replace spaces with underscores in column names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "id": "09d445d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race/ethnicity</th>\n",
+       "      <th>parental_level_of_education</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>test_preparation_course</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>writing_score</th>\n",
+       "      <th>total_score</th>\n",
+       "      <th>average</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>218.0</td>\n",
+       "      <td>72.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>88</td>\n",
+       "      <td>247.0</td>\n",
+       "      <td>82.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>master's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>93</td>\n",
+       "      <td>278.0</td>\n",
+       "      <td>92.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group A</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>44</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>49.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>229.0</td>\n",
+       "      <td>76.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gender race/ethnicity parental_level_of_education         lunch  \\\n",
+       "0  female        group B           bachelor's degree      standard   \n",
+       "1  female        group C                some college      standard   \n",
+       "2  female        group B             master's degree      standard   \n",
+       "3    male        group A          associate's degree  free/reduced   \n",
+       "4    male        group C                some college      standard   \n",
+       "\n",
+       "  test_preparation_course  math_score  reading_score  writing_score  \\\n",
+       "0                    none        72.0           72.0             74   \n",
+       "1               completed        69.0           90.0             88   \n",
+       "2                    none        90.0           95.0             93   \n",
+       "3                    none        47.0           57.0             44   \n",
+       "4                    none        76.0           78.0             75   \n",
+       "\n",
+       "   total_score    average  \n",
+       "0        218.0  72.666667  \n",
+       "1        247.0  82.333333  \n",
+       "2        278.0  92.666667  \n",
+       "3        148.0  49.333333  \n",
+       "4        229.0  76.333333  "
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()  # Display the first few rows of the dataframe to verify successful loading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "id": "d370c115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##\n",
+    "\n",
+    "df.to_csv('data/StudentsPerformance_cleaned.csv', index=False)  # Save the cleaned DataFrame to a new CSV file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ede47c9e",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
